--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
 <section class="slider1 cid-shgUvoBttm mbr-fullscreen" id="slider1-g">
     
-    <div class="carousel slide carousel-fade" id="siNQ2QLFTo" data-ride="carousel" data-interval="6000">
+    <div class="carousel slide carousel-fade" id="siNVoXtd6K" data-ride="carousel" data-interval="6000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" class="active" data-target="#siNQ2QLFTo"></li>
-            <li data-slide-to="1" data-target="#siNQ2QLFTo"></li>
-            <li data-slide-to="2" data-target="#siNQ2QLFTo"></li>
+            <li data-slide-to="0" class="active" data-target="#siNVoXtd6K"></li>
+            <li data-slide-to="1" data-target="#siNVoXtd6K"></li>
+            <li data-slide-to="2" data-target="#siNVoXtd6K"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -95,11 +95,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#siNQ2QLFTo">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#siNVoXtd6K">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#siNQ2QLFTo">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#siNVoXtd6K">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -150,7 +150,7 @@
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">Dacă aveți idei sau chiar reproșuri cu care ne puteți ajuta să evoluăm, dați-ne un feedback.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=iframe" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=iframe" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 
